gcc/testsuite/rust/rustc/ui/methods/filter-relevant-fn-bounds_dg.rs
trait Output<'a> {
    type Type;
}

struct Wrapper;

impl Wrapper {
    fn do_something_wrapper<O, F>(self, _: F)
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
    where
        F: for<'a> FnOnce(<F as Output<'a>>::Type),
// { dg-error ".E0277." "" { target *-*-* } .-1 }
// { dg-error ".E0277." "" { target *-*-* } .-2 }
    {
    }
}

fn main() {
    let mut wrapper = Wrapper;
    wrapper.do_something_wrapper(|value| ());
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

